Expanded the explanation of uniqueness rules with explanations of what they mean when read both from left to right and from right to left (with the example changed from functions to products). Also added a paragraph about a different way of stating uniqueness rules.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -243,7 +243,7 @@ Types and terms are manipulated using judgements, which are just assertions that
 
 The notions of type and term are not absolute. Sometimes we can assert that $A$ is a type or that $t$ is a term of type $A$ only under some assumptions. For example, we can assert that $\Fin{n}$, the type that is supposed to have exactly $n$ distinct elements, is indeed a type, only under the assumption that $n$ is a natural number. We write this formally as $\type{n : \N}{\Fin{n}}$. Another example: we can assert that $n + m$ is a natural number only under the assumptions that $n$ and $m$ are natural numbers, which we write as $\term{n : \N, m : \N}{n + m}{\N}$.
 
-We keep track of assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement is made under assumptions from $\Gamma$. Such a judgement is called a hypothetical judgement. So, in their full generality, type formation judgement and typing judgement are hypothetical judgements. The type formation judgement is written $\type{\Gamma}{A}$ and read ``in context $\Gamma$, $A$ is a type'', whereas the typing judgement is written $\term{\Gamma}{t}{A}$ and read ``in context $\Gamma$, $t$ is of type $A$''. What is and what is not a context is governed by a third kind of judgement, the well-formed context judgement, which is written $\context{\Gamma}$ and read ``$\Gamma$ is a (well-formed) context''. This kind of judgement is absolute and can not depend on any assumptions.
+We keep track of assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement is made under assumptions from $\Gamma$. Such a judgement is called a hypothetical judgement. So, in their full generality, type formation judgement and typing judgement are hypothetical judgements. The type formation judgement is written $\type{\Gamma}{A}$ and read ``in context $\Gamma$, $A$ is a type'', whereas the typing judgement is written $\term{\Gamma}{t}{A}$ and read ``in context $\Gamma$, $t$ is of type $A$''. What is and what is not a context is governed by a third kind of judgement, the well-formed context judgement, which is written $\context{\Gamma}$ and read ``$\Gamma$ is a (well-formed) context''. The well-formed context judgement is absolute and cannot depend on any assumptions.
 
 It is important to reiterate that not all judgements are derivable. For example, the judgement $\term{}{5}{\N \to \N}$ asserts that five is a function from natural numbers to natural numbers, but this is clearly nonsense. To know which judgements are derivable (and which are not), we need inference rules. An inference rule in general has the form ``if $J_1$, \dots, $J_n$, then $J$'' and means that we can derive the judgement $J$ provided that we have already derived all of the judgements $J_1, \dots, J_n$. An important special case are inference rules with no premises, i.e. of the form ``$J$''. Such a rule declares that the judgement $J$ can be derived unconditionally. For rules with no premises, we will identify the whole rule with the judgement $J$. In most texts, inference rules are written with a horizontal line notation, with premises (if any) above the line and the conclusion below it, but in the following paragraphs we will state them inline using ordinary sentences.
 
@@ -267,7 +267,11 @@ The core inference rules that govern the convertibility judgement ensure that it
 
 Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules. Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{X}{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{X}{z}{s}{\suc{n}}}{s(\recN{X}{z}{s}{n})}{X}$.
 
-Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for function types states that given $\term{\Gamma}{f}{A \to B}$ we can derive $\termconv{\Gamma}{\lambda x.f(x)}{f}{A \to B}$. Uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory lack a uniqueness rule for the natural numbers. In general, uniqueness rules are common for the unit type, the product type, the function type and other negative types, whereas they are very rare for positive types.\footnote{The reason for not including uniqueness rules for positive types is mostly that they are hard to implement, but there also are some model-related concerns. See \cite{Eta} for how to formulate a uniqueness rule for the natural numbers and for a more philosophical discussion of uniqueness rules in general. Also see \cite{Polarity} for a lightweight blogpost introducing the distinction between positive and negative types.}
+Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for products states that given $\term{\Gamma}{x}{A \times B}$ we can derive $\termconv{\Gamma}{(\pi_1(x), \pi_2(x))}{x}{A \times B}$. When read from left to right, this rule says that if we take $x$ apart using projections (the elimination rules) and then put them together into a pair (the introduction rule), we get the same $x$ that we started with. Alternatively, when read from right to left, this rule says that every term $x$ of type $A \times B$ is a pair of terms of type $A$ and $B$ (which happen to be the projections of $x$). In short: terms of the product type are pairs.
+
+There is also another way of stating the uniqueness rules, whose flavour is less computational and more equational. It is very rare and barely ever appears in the literature. In this presentation, uniqueness rules tell us when two terms of a given type are convertible. For example, the uniqueness rule for products stated in this way says that given $\termconv{\Gamma}{\pi_1(x)}{\pi_1(y)}{A}$ and $\termconv{\Gamma}{\pi_2(x)}{\pi_2(y)}{B}$, we can derive $\termconv{\Gamma}{x}{y}{A \times B}$. In words, this means that terms of the product type are convertible when their first and second projections are convertible.\footnote{Note that this rule is different from the similar-looking congruence rule which says that given $\termconv{\Gamma}{a_1}{a_2}{A}$ and $\termconv{\Gamma}{b_1}{b_2}{B}$ we can derive $\termconv{\Gamma}{(a_1, b_1)}{(a_2, b_2)}{A \times B}$. This congruence rule only applies to pairs, not to arbitrary terms of type $A \times B$. The point of the uniqueness rule for products is precisely that it ensures that all terms of the product type are pairs.}
+
+Uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory lack a uniqueness rule for the natural numbers. In general, uniqueness rules are common for the unit type, the product type, the function type and other negative types, whereas they are very rare for positive types.\footnote{The reason for not including uniqueness rules for positive types is mostly that they are hard to implement, but there also are some model-related concerns. See \cite{Eta} for how to formulate a uniqueness rule for the natural numbers and for a more philosophical discussion of uniqueness rules in general. Also see \cite{Polarity} for a lightweight blogpost introducing the distinction between positive and negative types.}
 
 Besides computation and uniqueness rules, there is also a huge number of congruence rules which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that the successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{X}{z_1}{s_1}{n_1}}{\recN{X}{z_2}{s_2}{n_2}}{X}$.
 
